testsuite/tests/linear/should_fail/Linear9.stderr

Linear9.hs:8:17: error:
    • Wildcard patterns of weight  ‘1’ are not allowed
    • In the pattern: _
      In the pattern: (a, _)
      In an equation for ‘incorrectFst’: incorrectFst (a, _) = a

Linear9.hs:11:20: error:
    • Couldn't match expected weight ‘1’ of variable ‘b’ with actual weight ‘0’
    • In the pattern: (a, b)
      In an equation for ‘incorrectFstVar’: incorrectFstVar (a, b) = a

Linear9.hs:14:20: error:
    • Couldn't match type ‘'GHC.Types.Omega’ with ‘'GHC.Types.One’
        arising from an application
    • In the pattern: (a, b)
      In an equation for ‘incorrectFirstDup’:
          incorrectFirstDup (a, b) = ((a, a), b)

Linear9.hs:17:21: error:
    • Wildcard patterns of weight  ‘1’ are not allowed
    • In the pattern: _
      In the pattern: (a, _)
      In the pattern: ((a, _), _)

Linear9.hs:17:24: error:
    • Wildcard patterns of weight  ‘1’ are not allowed
    • In the pattern: _
      In the pattern: ((a, _), _)
      In an equation for ‘incorrectFstFst’:
          incorrectFstFst ((a, _), _) = a

Linear9.hs:24:25: error:
    • Wildcard patterns of weight  ‘1’ are not allowed
    • In the pattern: _
      In the pattern: Foo a _
      In an equation for ‘incorrectTestFst’:
          incorrectTestFst (Foo a _) = a
